+ Implemented instrumenting lambda calls + Implemented instrumentation of JAR resources during loading by configuration * Fixed IASProxyProxyBuilder by not using Java 9 API * Fixed toString calls